src/templates/manifests/ingress-secure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  www-roadtokubernetes-com-ingress
  namespace: www
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod-www"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
