src/templates/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  www-roadtokubernetes-com-ingress
  namespace: www
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod-www"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"

# spec:
#   # required to trigger cert being made/requested
#   tls:
#     - hosts:
#       - www.roadtokubernetes.com
#       secretName: tls-www-roadtokubernetes
#   rules:
#   - host: www.roadtokubernetes.com
#     http:
#       paths:
#       - backend:
#           service: 
#             name: www-roadtokubernetes-com-service
#             port:
#               number: 80
#         path: /
#         pathType: Prefix
